--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "drizzle-zod": "^0.5.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "jose": "^4.14.4",
     "next": "13.4.13",
     "pg": "^8.11.2",
     "postcss": "8.4.27",
@@ -29,6 +30,7 @@
     "react-dom": "18.2.0",
     "swr": "^2.2.1",
     "tailwindcss": "3.3.3",
+    "tsx": "^3.12.7",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
   },
